--- a/books.html
+++ b/books.html
@@ -33,7 +33,7 @@
     <h2>Jedot Books</h2>
     <p>Browse and borrow our original titles, written with heart, wisdom, and creativity.</p>
 
-    <div class="book-list" style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center;">
+    <div class="book-list">
 
       <!-- Book 1: Bothersome Kate -->
       <div class="book-item" style="width: 320px; border: 1px solid #ccc; border-radius: 8px; padding: 15px; margin: 10px; text-align: center;">
