--- a/female.html
+++ b/female.html
@@ -137,6 +137,62 @@
             <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
           </form>
         </div>
+
+        <!-- Dress 5 -->
+        <div class="dress-item">
+          <img src="images/multicolor_ankara1.jpg" alt="Multicolor Ankara">
+          <p><strong>Multicolor Ankara</strong></p>
+          <p>Price: €23,50 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="44">44</option>
+    <option value="46">46</option>
+    <option value="48">48</option>
+    <option value="50">50</option>
+    <option value="52">52</option>
+    <option value="54">54</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+        
+        <style>.pp-ZHAXPT2W8XLQ8{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/ZHAXPT2W8XLQ8" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-ZHAXPT2W8XLQ8" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
+
+        <!-- Dress 6 -->
+        <div class="dress-item">
+          <img src="images/multicolor_ankara2.jpg" alt="Multicolor Ankara">
+          <p><strong>Multicolor Ankara</strong></p>
+          <p>Price: €23,50 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="44">44</option>
+    <option value="46">46</option>
+    <option value="48">48</option>
+    <option value="50">50</option>
+    <option value="52">52</option>
+    <option value="54">54</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+
+          <style>.pp-B56RB2VHP3NQS{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/B56RB2VHP3NQS" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-B56RB2VHP3NQS" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
       </div>
     </section>
   </main>
