--- a/female.html
+++ b/female.html
@@ -140,18 +140,16 @@
 
         <!-- Dress 5 -->
         <div class="dress-item">
-          <img src="images/multicolor_ankara1.jpg" alt="Multicolor Ankara">
-          <p><strong>Multicolor Ankara</strong></p>
+          <img src="images/multicolor_ankara1.jpg" alt="Multicolor Ankara Suit">
+          <p><strong>Multicolor Ankara Suit</strong></p>
           <p>Price: €23,50 (includes shipping)</p>
 
             <label for="size1"><strong>Select Your Size:</strong></label><br>
   <select id="size1" name="size1">
-    <option value="44">44</option>
-    <option value="46">46</option>
+    <option value="24">24</option>
+    <option value="26">26</option>
     <option value="48">48</option>
     <option value="50">50</option>
-    <option value="52">52</option>
-    <option value="54">54</option>
   </select>
 
   <p style="font-size: 0.9em; color: #555;">
@@ -168,18 +166,16 @@
 
         <!-- Dress 6 -->
         <div class="dress-item">
-          <img src="images/multicolor_ankara2.jpg" alt="Multicolor Ankara">
-          <p><strong>Multicolor Ankara</strong></p>
+          <img src="images/multicolor_ankara2.jpg" alt="Multicolor Ankara Suit">
+          <p><strong>Multicolor Ankara Suit</strong></p>
           <p>Price: €23,50 (includes shipping)</p>
 
             <label for="size1"><strong>Select Your Size:</strong></label><br>
   <select id="size1" name="size1">
-    <option value="44">44</option>
-    <option value="46">46</option>
+    <option value="24">24</option>
+    <option value="26">26</option>
     <option value="48">48</option>
     <option value="50">50</option>
-    <option value="52">52</option>
-    <option value="54">54</option>
   </select>
 
   <p style="font-size: 0.9em; color: #555;">
